# Face-Reconstruction-TUM-3D-Scanning

./: .gitignore  BLWI_DATASET_GUIDE.md  BLWI_DATASET_SETUP.md  BLWI_QUICK_START.md  BLWI_WORKING_GUIDE.md  CHECK_DATASET.md  CMakeLists.txt  DATA_FORMAT.md  HOCA_FINAL_DEMO.md  LICENSE  MILESTONE_STATUS.md  QUICK_BIWI_GUIDE.md  QUICK_START.md  README.md  TESTING_WITH_REAL_DATA.md  WEEK1_SUMMARY.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md  WEEK4_FINAL_REPORT.md  WEEK4_IMPLEMENTATION.md  WEEK5_DEMO_SONUCLARI.md  WEEK5_REPORT.md  demo_week5.py  hoca_demo.py  requirements.txt
data/: landmark_mapping.txt
data/biwi_person01/: intrinsics.txt  reconstructed_with_depth.ply
data/model/: faces.txt
data/model_biwi/: faces.txt
hoca_demo/: 0_SADECE_SCAN_POINTS.ply
include/alignment/: ICP.h  LandmarkMapping.h  Procrustes.h
include/camera/: CameraIntrinsics.h
include/data/: RGBDFrame.h
include/landmarks/: LandmarkData.h
include/model/: MorphableModel.h
include/optimization/: EnergyFunction.h  GaussNewton.h  Parameters.h
include/rendering/: DepthRenderer.h
include/utils/: DepthUtils.h
pipeline/: __init__.py  create_faces_from_mean_shape.py  extract_faces_from_ply.py  main.py
pipeline/steps/: __init__.py  analysis.py  conversion.py  download.py  landmark_model_download.py  landmarks.py  mapping.py  model_download.py  model_setup.py  overlays.py  pose_init.py  preflight.py  reconstruction.py  tests.py  tracking.py
pipeline/utils/: __init__.py  convert_bfm_to_project.py  create_bfm_landmark_mapping.py  create_mean_shape_from_pointclouds.py  create_pointcloud_from_rgbd.py  debug_alignment.py  triangulate_pointcloud.py  verify_bfm_semantic_mapping.py
reports/week6/: milestones_week6.md  week6_results.md  week6_slides_outline.md
reports/week6/figures/: 01_frame_00000_overlay_metrics.json  17_frame_00000_overlay_metrics.json  README.md
scripts/: README.md  README_FACES.md  aggregate_summary.py  alignment_and_frame_metrics.py  analyze_sparse_alignment.py  center_mesh.py  check_biwi_dataset.py  collect_week4_metrics.py  compute_metrics.py  convert_biwi_dataset.py  create_landmark_mapping.py  create_model_from_biwi.py  create_upload_bundle.py  detect_landmarks.py  eval_depth_and_runtime.py  export_overlay_ply.py  generate_visuals.py  pipeline.py  plot_tracking_metrics.py  prepare_model.py  process_biwi_frames.sh  read_biwi_depth.py  run_eval.py  run_week4.py  run_week6_eval.py  split_overlay_ply.py  test_real_data.sh  triangulate_pointcloud.py  week4_full_evaluation.py  week4_weight_tuning.py
scripts/legacy/: center_mesh.py
scripts/pipeline/: __init__.py
scripts/pipeline/steps/: __init__.py  analysis.py  conversion.py  download.py  landmarks.py  mapping.py  model_download.py  model_setup.py  pose_init.py  reconstruction.py
scripts/pipeline/utils/: create_pointcloud_from_rgbd.py
scripts/utils/: create_landmark_mapping.py
share/: artifacts_samples.tgz
src/: demo.cpp  main.cpp  test_depth_renderer.cpp  test_depth_residuals.cpp  test_export_mean_shape.cpp  test_pose_init.cpp
src/alignment/: ICP.cpp  LandmarkMapping.cpp  Procrustes.cpp
src/camera/: CameraIntrinsics.cpp
src/data/: RGBDFrame.cpp
src/landmarks/: LandmarkData.cpp
src/model/: MorphableModel.cpp
src/optimization/: EnergyFunction.cpp  GaussNewton.cpp  Parameters.cpp
src/rendering/: DepthRenderer.cpp
src/tools/: analysis.cpp  create_overlays.cpp  face_reconstruction.cpp  pose_init.cpp  validate_mapping.cpp
src/tools/legacy/: ICP.cpp
src/utils/: DepthUtils.cpp
tests/: run_regression.py  test_coefficient_clipping.cpp  test_depth_lifting.cpp  test_depth_renderer.cpp  test_depth_residuals.cpp  test_expression_influence.cpp  test_icp_validation.cpp  test_landmark_mapping.cpp  test_landmarks_io.cpp  test_pca_coeffs.cpp  test_pose_init.cpp  test_real_data.cpp
tools/legacy/: README.md  create_mean_shape_from_pointclouds.py  heuristic_create_landmark_mapping.py
